syntax = "proto3";

package plc;


import "type/plc_data_type.proto";


message BarTypePlcStatus {
    EnumType status = 1;
    bool auto_mode = 2;
    bool device_error = 3;
    bool logical_error = 4;
}

message BarTypePlcSchema {
    repeated BarTypePlcStatus lane_indicator = 1;  // 车指
    repeated BarTypePlcStatus traffic_light = 2;  // 红绿灯
    repeated BarTypePlcStatus blower = 3;  // 风机
    repeated BarTypePlcStatus rolling_door = 4;  // 卷帘门
    repeated BarTypePlcStatus led = 5;  // 照明
    repeated BarTypePlcStatus water_pump = 6;  // 水泵
    repeated BarTypePlcStatus wind_direction = 7;  // 风向

    repeated Float32Type co = 8;  // 一氧化碳
    repeated Float32Type vi = 9;  // 有害气体
    repeated Float32Type no2 = 10;  // 二氧化氮
    repeated Float32Type wind_speed = 11;  // 风速
    repeated Float32Type illuminance = 12;  // 照度
    repeated Float32Type light_intensity = 13;  // 光强
    repeated Float32Type liquid_level = 14;  // 液位
}
