syntax = "proto3";

package plc;


import "type/plc_data_type.proto";


message FooTypePlcStatus {
    EnumType status = 1;
    bool auto_mode = 2;
    bool device_error = 3;
    bool logical_error = 4;
}

message FooTypePlcSchema {
    bool is_adapter_activated = 1;

    repeated FooTypePlcStatus lane_indicator = 2;
    repeated FooTypePlcStatus traffic_light = 3;
    repeated FooTypePlcStatus blower = 4;
    repeated FooTypePlcStatus rolling_door = 5;
    repeated FooTypePlcStatus light = 6;
    repeated FooTypePlcStatus water_pump = 7;
    repeated FooTypePlcStatus wind_direction = 8;

    repeated Uint32Type co = 9;
    repeated Uint32Type vi = 10;
    repeated Uint32Type no2 = 11;
    repeated Uint32Type wind_speed = 12;
    repeated Uint32Type illuminance = 13;
    repeated Uint32Type light_intensity = 14;
    repeated Uint32Type liquid_level = 15;
}
